--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     *{box-sizing:border-box}
     body{font-family:Tajawal,system-ui,-apple-system,Segoe UI,Roboto,Arial; background:var(--bg); color:var(--ink); margin:0; padding:24px;}
     h1{margin:0 0 12px;color:var(--brand)}
-    .controls{display:flex; gap:8px; flex-wrap:wrap; margin-bottom:12px}
+    .controls{display:flex; gap:8px; flex-wrap:wrap; margin-bottom:12px; align-items:center}
     select,input,button{padding:8px 10px;border:1px solid #e1e8ed;border-radius:8px;background:#fff}
     button{background:var(--brand);color:#fff;border-color:var(--brand);cursor:pointer}
     button:hover{opacity:.95}
@@ -23,7 +23,9 @@
     th,td{padding:10px 12px; border-bottom:1px solid var(--edge); font-size:14px; text-align:right}
     th{background:#fff3e6}
     tr:hover{background:#fffdf8}
+    .neg{color:#c62828; font-weight:700}
     canvas{max-width:100%;}
+    label.chk{display:inline-flex; gap:6px; align-items:center; user-select:none}
   </style>
 </head>
 <body>
@@ -38,6 +40,10 @@
     </label>
     <label>إلى:
       <input type="date" id="to">
+    </label>
+    <label class="chk">
+      <input type="checkbox" id="onlyCurrent" checked>
+      إظهار موظفي المعرض الحالي فقط
     </label>
     <button id="apply">تطبيق الفلتر</button>
   </div>
@@ -58,9 +64,9 @@
         <th>٪ فواتير قطعة واحدة</th>
         <th>مساهمة الموظف ٪</th>
         <th>التارجت</th>
-        <th>٪ تحقيق التارجت</th>
-        <th>المتبقي للتارجت</th>
-        <th>اليومي المتبقي</th>
+        <th>٪ تحقيق التارجت (شهري)</th>
+        <th>المتبقي للتارجت (شهري)</th>
+        <th>اليومي المتبقي (حتى نهاية الشهر)</th>
         <th>متوسط الفاتورة</th>
       </tr>
     </thead>
@@ -76,21 +82,60 @@
     const fmt  = n => (+n||0).toLocaleString('en-US', {maximumFractionDigits:0});
 
     let facts=[], outlets=[], staff=[], staffMap={};
+    let hist=[], histMap={};   // تاريخ الانتساب
     let chart;
 
+    // ====== تواريخ مساعدة ======
+    function parseD(s){ if(!s) return null; return new Date(s+'T00:00:00'); }
+    function today0(){ const d=new Date(); d.setHours(0,0,0,0); return d; }
+    function monthStartOf(toStr){
+      const d = toStr ? new Date(toStr+'T00:00:00') : today0();
+      return new Date(d.getFullYear(), d.getMonth(), 1);
+    }
+    function daysRemainingToMonthEnd(){
+      const t = today0();
+      const end = new Date(t.getFullYear(), t.getMonth()+1, 0);
+      if (t > end) return 0;
+      return Math.floor((end - t)/86400000) + 1;
+    }
+
+    // ====== خريطة التاريخ ======
+    function buildHistMap(){
+      histMap = {};
+      hist.forEach(r=>{
+        const id = r.staff_id;
+        if(!histMap[id]) histMap[id]=[];
+        histMap[id].push({
+          outlet_name: r.outlet_name,
+          start: parseD(r.start_date),
+          end:   r.end_date ? parseD(r.end_date) : null
+        });
+      });
+    }
+    function isInOutletOnDate(staffId, outlet, refDate){
+      const arr = histMap[staffId] || [];
+      return arr.some(seg=>{
+        return seg.outlet_name === outlet &&
+               refDate >= seg.start &&
+               (!seg.end || refDate <= seg.end);
+      });
+    }
+
+    // ====== تحميل البيانات ======
     async function loadData() {
-      // تحميل ملفات الـETL
-      [facts, outlets, staff] = await Promise.all([
+      [facts, outlets, staff, hist] = await Promise.all([
         fetch('./dashboard_data/facts.json').then(r=>r.json()),
         fetch('./dashboard_data/outlets.json').then(r=>r.json()),
         fetch('./dashboard_data/staff.json').then(r=>r.json()),
+        fetch('./dashboard_data/staff_outlet_history.json').then(r=>r.json()).catch(()=>[])
       ]);
 
-      // خريطة الموظف -> الاسم والتارجت
       staffMap = {};
       staff.forEach(s => { staffMap[s.staff_id] = s; });
 
-      // تعبئة قائمة المعارض
+      buildHistMap();
+
+      // تعبئة المعارض
       const sel = document.getElementById('outlet');
       sel.innerHTML = '<option value="">كل المعارض</option>';
       outlets.forEach(o=>{
@@ -99,7 +144,7 @@
         sel.appendChild(opt);
       });
 
-      // نطاق التواريخ الافتراضي
+      // نطاق تواريخ افتراضي من أول يوم لآخر يوم موجود
       const dates = facts.map(f=>f.bill_date).sort();
       document.getElementById('from').value = dates[0] || '';
       document.getElementById('to').value   = dates[dates.length-1] || '';
@@ -107,6 +152,7 @@
       render();
     }
 
+    // نطاق الفلترة للعرض
     function filterData() {
       const outlet = document.getElementById('outlet').value;
       const from = document.getElementById('from').value;
@@ -118,61 +164,87 @@
       );
     }
 
-    // الأيام المتبقية حتى تاريخ "إلى" (شاملاً اليوم)
-    function daysRemainingWithinRange() {
-      const toStr = document.getElementById('to').value;
-      if(!toStr) return 0;
-      const today = new Date(); today.setHours(0,0,0,0);
-      const to = new Date(toStr+'T00:00:00');
-      if(today > to) return 0;
-      const ms = to - today;
-      return Math.floor(ms/86400000) + 1;
+    // فلترة أسماء غير صالحة: فارغ أو Unknown/Unkown/Unknow بدون رقم
+    function isBadName(name){
+      if(!name) return true;
+      const n = String(name).trim();
+      if(!n) return true;
+      if (/^(unknow(n)?|unkonw)$/i.test(n)) return true;
+      if (/^unknown$/i.test(n)) return true; // "Unknown" فقط
+      return false;
     }
 
+    // ====== التصيير ======
     function render() {
       const f = filterData();
+      const outletSel  = document.getElementById('outlet').value;
+      const onlyCurrent = document.getElementById('onlyCurrent').checked;
+      const toStr = document.getElementById('to').value;
+      const refDate = parseD(toStr) || today0();
 
       // إجمالي مبيعات المعرض للفترة (للمساهمة %)
       const outletTotal = f.reduce((s,r)=>s + (+r.net_amount||0), 0);
 
-      // تجميع حسب الموظف
+      // تجميع حسب الموظف للفترة المعروضة (للجدول)
       const byStaff = {};
       f.forEach(r=>{
         const id   = r.staff_id;
-        const name = r.staff_name || (staffMap[id]?.staff_name || 'Unknown');
+        const name = (r.staff_name || staffMap[id]?.staff_name || '').trim();
+        if (isBadName(name)) return;
+
         if(!byStaff[id]) byStaff[id] = {name, net:0, bills:0, oneBills:0};
         byStaff[id].net      += +r.net_amount || 0;
         byStaff[id].bills    += +r.bills || 0;
-        byStaff[id].oneBills += +r.one_item_bills || 0; // يأتي من الـETL
+        byStaff[id].oneBills += +r.one_item_bills || 0;
       });
 
-      // بناء صفوف الجدول
-      const dRem = daysRemainingWithinRange();
-      const rows = Object.entries(byStaff).map(([id,v])=>{
+      // -------- حساب MTD للتارجت (من أول الشهر حتى تاريخ "إلى") --------
+      const mStart = monthStartOf(toStr).toISOString().slice(0,10);
+      const mEnd   = toStr || (facts.length ? facts.map(x=>x.bill_date).sort().slice(-1)[0] : '');
+      const mtd = facts.filter(r =>
+        (!outletSel || r.outlet_name === outletSel) &&
+        r.bill_date >= mStart &&
+        (!mEnd || r.bill_date <= mEnd)
+      );
+
+      const byStaffMTD = {};
+      mtd.forEach(r=>{
+        const id   = r.staff_id;
+        const name = (r.staff_name || staffMap[id]?.staff_name || '').trim();
+        if (isBadName(name)) return;
+
+        if(!byStaffMTD[id]) byStaffMTD[id] = {name, net:0};
+        byStaffMTD[id].net += +r.net_amount || 0;
+      });
+
+      // بناء الصفوف
+      const dRemMonth = daysRemainingToMonthEnd();
+      let rows = Object.entries(byStaff).map(([id,v])=>{
         const target  = +(staffMap[id]?.target_amount || 0);
-        const achPct  = target>0 ? (v.net/target*100) : 0;
-        const remain  = Math.max(target - v.net, 0);
-        const daily   = dRem>0 ? (remain/dRem) : 0;
+        const mtdNet  = (byStaffMTD[id]?.net || 0);               // صافي الموظف من بداية الشهر
+        const achPct  = target>0 ? (mtdNet/target*100) : 0;        // نسبة تحقيق التارجت (شهري)
+        const remain  = Math.max(target - mtdNet, 0);              // المتبقي (شهري)
+        const daily   = dRemMonth>0 ? (remain/dRemMonth) : 0;      // اليومية المتبقية حتى نهاية الشهر
         const contrib = outletTotal>0 ? (v.net/outletTotal*100) : 0;
         const onePct  = v.bills>0 ? (v.oneBills/v.bills*100) : 0;
         const avg     = v.bills ? (v.net/v.bills) : 0;
-        return {
-          id,
-          name: v.name,
-          net: v.net,
-          bills: v.bills,
-          oneBills: v.oneBills,
-          onePct,
-          contribPct: contrib,
-          target,
-          achPct,
-          remain,
-          daily,
-          avg
-        };
-      }).sort((a,b)=>b.net-a.net);
 
-      // KPIs أعلى الصفحة
+        return {
+          id, name:v.name,
+          net:v.net, bills:v.bills, oneBills:v.oneBills,
+          onePct, contribPct:contrib,
+          target, achPct, remain, daily, avg
+        };
+      });
+
+      // فلترة "موظفي المعرض الحالي فقط"
+      if (onlyCurrent && outletSel) {
+        rows = rows.filter(r => isInOutletOnDate(r.id, outletSel, refDate));
+      }
+
+      rows.sort((a,b)=>b.net-a.net);
+
+      // KPIs أعلى الصفحة (حسب الفترة المعروضة)
       const totNet   = rows.reduce((s,x)=>s+x.net,0);
       const totBills = rows.reduce((s,x)=>s+x.bills,0);
       document.getElementById('kpiNet').textContent  = fmt(totNet);
@@ -200,7 +272,7 @@
         tb.appendChild(tr);
       });
 
-      // خط المبيعات اليومية
+      // خط المبيعات اليومية (حسب الفترة المعروضة)
       const byDate = {};
       f.forEach(r=>{ byDate[r.bill_date] = (byDate[r.bill_date]||0) + (+r.net_amount||0); });
       const labels = Object.keys(byDate).sort();
